// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`charge.captured sends a birth shipped email 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Nancy Whitehead",
      "nancy@mew.org",
      Object {
        "fixedFee": 25,
        "items": Array [
          Object {
            "cost": 8400,
            "date": 1976-10-06T04:00:00.000Z,
            "name": "Carol Danvers",
            "quantity": 6,
          },
        ],
        "orderDate": 2018-01-11T18:40:27.707Z,
        "orderId": "RG-BC201902-150464",
        "percentageFee": 0.021,
        "serviceFee": 266,
        "serviceFeeUri": "https://www.boston.gov/common-questions-about-online-payments",
        "shippingAddress1": "Avengers Tower",
        "shippingAddress2": "",
        "shippingCity": "New York",
        "shippingCompanyName": "US Avengers",
        "shippingName": "Squirrel Girl",
        "shippingState": "NY",
        "shippingZip": "10001",
        "subtotal": 8400,
        "total": 8666,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`charge.captured sends a marriage shipped email 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Nancy Whitehead",
      "nancy@mew.org",
      Object {
        "fixedFee": 25,
        "items": Array [
          Object {
            "cost": 1400,
            "date": "",
            "name": "undefined & undefined;",
            "quantity": 1,
          },
        ],
        "orderDate": 2018-01-11T18:40:27.707Z,
        "orderId": "RG-MC201902-150464",
        "percentageFee": 0.021,
        "serviceFee": 266,
        "serviceFeeUri": "https://www.boston.gov/common-questions-about-online-payments",
        "shippingAddress1": "Avengers Tower",
        "shippingAddress2": "",
        "shippingCity": "New York",
        "shippingCompanyName": "US Avengers",
        "shippingName": "Squirrel Girl",
        "shippingState": "NY",
        "shippingZip": "10001",
        "subtotal": 1400,
        "total": 1666,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`charge.created sends birth email 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Nancy Whitehead",
      "nancy@mew.org",
      Object {
        "fixedFee": 25,
        "items": Array [
          Object {
            "cost": 8400,
            "date": 1976-10-06T04:00:00.000Z,
            "name": "Carol Danvers",
            "quantity": 6,
          },
        ],
        "orderDate": 2018-01-11T18:40:27.707Z,
        "orderId": "RG-BC201901-414211",
        "percentageFee": 0.021,
        "serviceFee": 266,
        "serviceFeeUri": "https://www.boston.gov/common-questions-about-online-payments",
        "shippingAddress1": "Avengers Tower",
        "shippingAddress2": "",
        "shippingCity": "New York",
        "shippingCompanyName": "US Avengers",
        "shippingName": "Squirrel Girl",
        "shippingState": "NY",
        "shippingZip": "10001",
        "subtotal": 8400,
        "total": 8666,
      },
    ],
    Array [
      "Nancy Whitehead",
      "nancy@mew.org",
      Object {
        "fixedFee": 25,
        "items": Array [
          Object {
            "cost": 8400,
            "date": 1976-10-06T04:00:00.000Z,
            "name": "Carol Danvers",
            "quantity": 6,
          },
        ],
        "orderDate": "2018-01-11T18:40:27.707Z",
        "orderId": "RG-BC201901-414211",
        "percentageFee": 0.021,
        "serviceFee": 266,
        "serviceFeeUri": "https://www.boston.gov/common-questions-about-online-payments",
        "shippingAddress1": "Avengers Tower",
        "shippingAddress2": "",
        "shippingCity": "New York",
        "shippingCompanyName": "US Avengers",
        "shippingName": "Squirrel Girl",
        "shippingState": "NY",
        "shippingZip": "10001",
        "subtotal": 8400,
        "total": 8666,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`charge.created sends death email 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Nancy Whitehead",
      "nancy@mew.org",
      Object {
        "fixedFee": 25,
        "items": Array [
          Object {
            "cost": 9800,
            "date": null,
            "name": "MAUDIE MERTZ",
            "quantity": 7,
          },
          Object {
            "cost": 1400,
            "date": null,
            "name": "MAUDIE MERTZ",
            "quantity": 1,
          },
        ],
        "orderDate": 2018-01-11T18:40:27.707Z,
        "orderId": "DC-20171215-yg4lk",
        "percentageFee": 0.021,
        "serviceFee": 266,
        "serviceFeeUri": "https://www.boston.gov/common-questions-about-online-payments",
        "shippingAddress1": "Avengers Tower",
        "shippingAddress2": "",
        "shippingCity": "New York",
        "shippingCompanyName": "US Avengers",
        "shippingName": "Squirrel Girl",
        "shippingState": "NY",
        "shippingZip": "10001",
        "subtotal": 11200,
        "total": 11466,
      },
    ],
    Array [
      "Nancy Whitehead",
      "nancy@mew.org",
      Object {
        "fixedFee": 25,
        "items": Array [
          Object {
            "cost": 9800,
            "date": null,
            "name": "MAUDIE MERTZ",
            "quantity": 7,
          },
          Object {
            "cost": 1400,
            "date": null,
            "name": "MAUDIE MERTZ",
            "quantity": 1,
          },
        ],
        "orderDate": 2018-01-11T18:40:27.707Z,
        "orderId": "DC-20171215-yg4lk",
        "percentageFee": 0.021,
        "serviceFee": 266,
        "serviceFeeUri": "https://www.boston.gov/common-questions-about-online-payments",
        "shippingAddress1": "Avengers Tower",
        "shippingAddress2": "",
        "shippingCity": "New York",
        "shippingCompanyName": "US Avengers",
        "shippingName": "Squirrel Girl",
        "shippingState": "NY",
        "shippingZip": "10001",
        "subtotal": 11200,
        "total": 11466,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`charge.created sends marriage email 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Nancy Whitehead",
      "nancy@mew.org",
      Object {
        "fixedFee": 25,
        "items": Array [
          Object {
            "cost": 1400,
            "date": "",
            "name": "undefined & undefined;",
            "quantity": 1,
          },
        ],
        "orderDate": "2018-01-11T18:40:27.707Z",
        "orderId": "RG-MC201901-414211",
        "percentageFee": 0.021,
        "serviceFee": 266,
        "serviceFeeUri": "https://www.boston.gov/common-questions-about-online-payments",
        "shippingAddress1": "Avengers Tower",
        "shippingAddress2": "",
        "shippingCity": "New York",
        "shippingCompanyName": "US Avengers",
        "shippingName": "Squirrel Girl",
        "shippingState": "NY",
        "shippingZip": "10001",
        "subtotal": 1400,
        "total": 1666,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`charge.expired sends a birth request expired email 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Nancy Whitehead",
      "nancy@mew.org",
      "RG-BC201902-150464",
      2019-02-07T18:45:12.000Z,
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`charge.expired sends a marriage request expired email 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Nancy Whitehead",
      "nancy@mew.org",
      "RG-MC201902-150464",
      2019-02-07T18:45:12.000Z,
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
